# servicenow-confluent-tools

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
cluster-link/: README.md  create_link.py  link.conf.example
cluster-link/tests/: test_create_link.py
connect-replicator/: requirements.txt  setup_replicator.py
connect-replicator/tests/: test_setup_replicator.py
docs/: exec-summary-ibm-confluent-partnership.md  ibm-confluent-integration-paths.md
docs/superpowers/plans/: 2026-04-23-mirror-topics.md
docs/superpowers/specs/: 2026-04-23-mirror-topics-design.md
extract-pem/: extract_pem.py  requirements-dev.txt
extract-pem/tests/: test_extract_pem.py
mirror-topics/: README.md  mirror_topics.py  requirements.txt
mirror-topics/tests/: test_mirror_topics.py
shared/: pem_common.py
sn_confluent/: cli.py
sn_confluent/api_key/: main.py
sn_confluent/api_key/tests/: test_api_key.py
sn_confluent/core/: CONTRACT.md  config.py  confluent.py  hermes.py  pem.py
sn_confluent/core/tests/: test_config.py
sn_confluent/deploy/: README.md  deploy.conf.example  main.py
sn_confluent/deploy/tests/: test_deploy.py
sn_confluent/extract/: README.md  main.py
sn_confluent/extract/tests/: test_extract.py
sn_confluent/link/: README.md  main.py
sn_confluent/link/tests/: test_link.py
sn_confluent/mirror/: README.md  main.py
sn_confluent/replicate/: README.md  link.conf.example  main.py
sn_confluent/setup/: wizard.py
sn_confluent/worker/: README.md  main.py  worker.conf.example
(+3 files in other folders)
